--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin | Etch-a-Sketch</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <footer>
+        <script src="app.js"></script>
+    </footer>
 </body>
 </html>
