--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin | Etch-a-Sketch</title>
+    <title>TOP | Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main></main>
     <footer>
         <script src="app.js"></script>
     </footer>
