--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main></main>
+    <main>
+        <section class="options">
+            <button class="resize-grid">Resize Grid</button>
+        </section>
+        <section class="grid-container"></section>
+    </main>
     <footer>
         <script src="app.js"></script>
     </footer>
