Feat: Add UI for etch-a-sketch logic

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOP | Etch-a-Sketch</title>
+    <title>TOP | Etch a Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
-        <section class="options">
-            <button class="resize-grid">Resize Grid</button>
+        <section class="grid-options">
+            <button class="change-grid">Change grid size</button>
         </section>
         <section class="grid-container"></section>
     </main>
@@ -17,4 +19,5 @@
         <script src="app.js"></script>
     </footer>
 </body>
+
 </html>
